--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,8 +9,12 @@ layout: default
 <div class="row">
 
   <!-- core -->
+  {% if page.panel != false %}  
   <div id="core-wrapper" class="col-12 col-lg-11 col-xl-9 pr-xl-4 pb-5">
-    <div class="post pl-1 pr-1 pl-md-2 pr-md-2">
+  {% else %}
+  <div id="core-wrapper" class="col">
+  {% endif %}
+    <div class="post pl-1 pr-1 pl-md-2 pr-md-2">  
 
     {% capture _content %}
       {% if layout.refactor or page.layout == 'page' %}
@@ -36,18 +40,20 @@ layout: default
   </div> <!-- #core-wrapper -->
 
   <!-- pannel -->
-  <div id="panel-wrapper" class="col-xl-3 pl-2 text-muted">
+  {% if page.panel != false %}
+    <div id="panel-wrapper" class="col-xl-3 pl-2 text-muted">
 
-    <div class="access">
-      {% include update-list.html %}
-      {% include trending-tags.html %}
+      <div class="access">
+        {% include update-list.html %}
+        {% include trending-tags.html %}
+      </div>
+
+      {% for _include in layout.pannel_includes %}
+        {% assign _include_path = _include | append: '.html' %}
+        {% include {{ _include_path }} %}
+      {% endfor %}
     </div>
-
-    {% for _include in layout.pannel_includes %}
-      {% assign _include_path = _include | append: '.html' %}
-      {% include {{ _include_path }} %}
-    {% endfor %}
-  </div>
+  {% endif %}
 
 </div>
 
