--- a/_layouts/sponsors.html
+++ b/_layouts/sponsors.html
@@ -4,7 +4,7 @@ layout: page
 
 <div class="row">
     {% for sponsor in site.sponsors %}
-    <div class="col-sm-4">
+    <div class="col-sm-4 d-flex align-items-stretch" style="margin-bottom: 0,5rem !important">
       <div class="card mb-3">
         <img class="card-img-top bg-white" src="../assets/img/sponsor/{{ sponsor.img }}" alt="{{ sponsor.name }}">
         <div class="card-body">
