--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -65,6 +65,23 @@ $tab-count: {{ site.tabs | size | plus: 1 }}; // plus 1 for home tab
   border-bottom: 0px !important;
 }
 
+.jumbotron-image {
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  width: 100vw;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
+}
+
+.jumbotron-image img {
+  filter: brightness(50%);
+}
+
 .fa-robot-link:hover {
   border-bottom: 0px solid var(--link-underline-color);
   transition: opacity .5s, transform 0.5s;
