test 3d model-viewer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,9 @@ layout: compress
 
 <!DOCTYPE html>
 
+<!-- Import the component for the model-viewer -->
+<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+
 {% include lang.html %}
 
 {% include assets-origin.html %}
