--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,6 @@ layout: compress
 
 <!DOCTYPE html>
 
-<!-- Import the component for the model-viewer -->
-<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-
 {% include lang.html %}
 
 {% include assets-origin.html %}
@@ -71,6 +68,10 @@ layout: compress
     {% include search-loader.html %}
 
     {% include js-selector.html %}
+
+    <script src="{{ '/assets/js/model-viewer.js' | relative_url }}"></script>
+    <!-- Loads <model-viewer> for browsers: -->
+    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 
   </body>
 
