fix toc issue on the pages

--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -1,8 +1,6 @@
 {% assign enable_toc = false %}
 {% if site.toc and page.toc %}
-  {% if page.content contains '<h2' or page.content contains '<h3' %}
-    {% assign enable_toc = true %}
-  {% endif %}
+  {% assign enable_toc = true %}
 {% endif %}
 
 {% if enable_toc %}
@@ -10,7 +8,7 @@
 <script src="{{ site.data.assets[origin].bootstrap-toc.js | relative_url }}"></script>
 
 <div id="toc-wrapper" class="pl-0 pr-4 mb-5">
-  <div class="panel-heading pl-3 pt-2 mb-2">{{- site.data.locales[lang].panel.toc -}}</div>
+  <div class="panel-heading pl-3 pt-2 mb-2">{{- site.data.locales[site.lang].panel.toc -}}</div>
   <nav id="toc" data-toggle="toc"></nav>
 </div>
 {% endif %}
