--- a/_layouts/robots.html
+++ b/_layouts/robots.html
@@ -2,40 +2,47 @@
 layout: page
 ---
 
-
 {% assign robots = site.robots | sort: 'date' | reverse %}
 
 <div class="row">
-{% for robot in robots %}
-<div class="col-sm-6 d-flex align-items-stretch" style="margin-bottom: 20px !important">
-  <div class="card">
-    <a {% if robot.doc-link %} href="{{ robot.doc-link | relative_url }}" {% endif %} style="border-bottom: 0px !important">
-        <img  class="card-img-top" 
-            src="../assets/img/robots/{{ robot.img }}" 
-            width="auto"
-            height="300"
-            style="width: 100%; height: 300px; object-fit: cover;"
-            alt="{{ robot.title }}"
+  {% for robot in robots %}
+  <div class="col-sm-6 d-flex align-items-stretch" style="margin-bottom: 20px !important;">
+    <div class="card" style="border-radius: 30px; overflow: hidden;">
+      <a {% if robot.doc-link %} href="{{ robot.doc-link | relative_url }}" {% endif %} style="border-bottom: 0px !important;">
+        <img class="card-img-top" 
+          src="../assets/img/robots/{{ robot.img }}" 
+          width="auto"
+          height="300"
+          style="width: 100%; height: 300px; object-fit: cover; border-radius: 30px 30px 0 0;"
+          alt="{{ robot.title }}"
         >
-    </a>
-    <div class="card-body">
-        <p class="title-card">{{ robot.title }}</p>
-        <p class="subtitle-card">{{robot.competition}} - {{robot.year}}</p>
+      </a>
+      <div class="card-body">
+        <p class="title-card">{{ robot.title }}<br></p>
+
+        <p class="subtitle-card">
+          {% for competition in robot.competitions %}
+            {{ competition.event }} - {{ robot.year }} - {{ competition.rank }}ème place {% if competition.prize != "" %} - {{ competition.prize }}{% endif %}{% if forloop.last == false %}<br>{% endif %}
+          {% endfor %}
+        </p>
+        
         <p class="card-text">{{robot.description}}</p>
-    </div>
-    <div class="card-footer">
-      <div class="share-wrapper">
-        <span class="robots-icons">
+
+        
+      </div>
+      <div class="card-footer">
+        <div class="share-wrapper">
+          <span class="robots-icons">
             <a href="{{ robot.github }}" aria-label="github" target="_blank" rel="noopener" title="Sources du projet" data-placement="top" data-toggle="tooltip">
-                <i class="fa-robot-link fab fa-github"></i>
+              <i class="fa-robot-link fab fa-github"></i>
             </a>
             <a href="{{ robot.youtube }}" aria-label="github" target="_blank" rel="noopener" title="Vidéo de présentation des robots" data-placement="top" data-toggle="tooltip">
-                <i class="fa-robot-link fab fa-youtube"></i>
+              <i class="fa-robot-link fab fa-youtube"></i>
             </a>
-        </span>
+          </span>
+        </div>
       </div>
     </div>
   </div>
-</div>
-{% endfor %}
+  {% endfor %}
 </div>
