refactor robot page

--- a/_sass/jekyll-theme-chirpy.scss
+++ b/_sass/jekyll-theme-chirpy.scss
@@ -19,6 +19,7 @@
   "layout/home",
   "layout/post",
   "layout/sponsors",
+  "layout/robot",
   "layout/tags",
   "layout/archives",
   "layout/categories",
