--- a/_layouts/robots.html
+++ b/_layouts/robots.html
@@ -8,7 +8,7 @@ layout: page
   {% for robot in robots %}
   <div class="col-sm-6 d-flex align-items-stretch" style="margin-bottom: 20px !important;">
     <div class="card" style="border-radius: 30px; overflow: hidden;">
-      <a {% if robot.doc-link %} href="{{ robot.doc-link | relative_url }}" {% endif %} style="border-bottom: 0px !important;">
+      <a href="{{ robot.url | relative_url }}" style="border-bottom: 0px !important;">
         <img class="card-img-top" 
           src="../assets/img/robots/{{ robot.img }}" 
           width="auto"
