--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -102,6 +102,9 @@ $tab-count: {{ site.tabs | size | plus: 1 }}; // plus 1 for home tab
   opacity: 1.0;
 }
 
+.modal-content {
+  background-color: var(--card-bg-color);
+}
 
 /* model-viewer style */
 
