--- a/_includes/match_display.html
+++ b/_includes/match_display.html
@@ -2,46 +2,85 @@
 
 <h2>{{ include.title }}</h2>
 
+{% assign sanitizedTitle = include.title | remove: ' ' %}
+{% assign sanitizedTitle = sanitizedTitle | replace: '.', '' | replace: ',', '' | replace: '!', '' %}
+{% assign sanitizedTitle = sanitizedTitle | replace: 'é', 'e' | replace: 'è', 'e' | replace: 'ê', 'e' | replace: 'à', 'a' | replace: 'â', 'a' | replace: 'î', 'i' | replace: 'ï', 'i' | replace: 'ô', 'o' | replace: 'ù', 'u' | replace: 'û', 'u' | replace: 'ç', 'c' %}
+
 <div class="d-flex justify-content-start mb-3">
     {% assign score1 = include.score1 | plus: 0 %}
     {% assign score2 = include.score2 | plus: 0 %}
 
     {% if score1 > score2 %}
-        <button type="button" class="btn btn-success rounded-pill mr-2" data-toggle="modal" data-target="#detailsModal">
+        <button type="button" class="btn btn-success rounded-pill mr-2" data-toggle="modal" data-target="#detailsModal{{ sanitizedTitle }}">
             {{ include.opponent1 }} <span class="badge badge-light badge-pill">{{ include.score1 }} pts</span>
         </button>
-        <button type="button" class="btn btn-info rounded-pill" data-toggle="modal" data-target="#detailsModal">
+        <button type="button" class="btn btn-info rounded-pill" data-toggle="modal" data-target="#detailsModal{{ sanitizedTitle }}">
             {{ include.opponent2 }} <span class="badge badge-light badge-pill">{{ include.score2 }} pts</span>
         </button>
     {% else %}
-        <button type="button" class="btn btn-info rounded-pill mr-2" data-toggle="modal" data-target="#detailsModal">
+        <button type="button" class="btn btn-info rounded-pill mr-2" data-toggle="modal" data-target="#detailsModal{{ sanitizedTitle }}">
             {{ include.opponent1 }} <span class="badge badge-light badge-pill">{{ include.score1 }} pts</span>
         </button>
-        <button type="button" class="btn btn-success rounded-pill" data-toggle="modal" data-target="#detailsModal">
+        <button type="button" class="btn btn-success rounded-pill" data-toggle="modal" data-target="#detailsModal{{ sanitizedTitle }}">
             {{ include.opponent2 }} <span class="badge badge-light badge-pill">{{ include.score2 }} pts</span>
         </button>
     {% endif %}
 </div>
 
 <!-- Modal Details Points de match -->
-<div class="modal fade" id="detailsModal" tabindex="-1" role="dialog" aria-labelledby="detailsModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
+<div class="modal fade" id="detailsModal{{ sanitizedTitle }}" tabindex="-1" role="dialog" aria-labelledby="detailsModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content theme-dark">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
             <div class="modal-body">
                 <div class="row">
-                    <div class="col-md-6">
-                        <h6>{{ include.opponent1 }}</h6>
-                        <p>{{ include.details1 | markdownify }}</p>
+                    <div class="col-md-6 text-center">
+                        <h5><b>Actions</b></h5>
                     </div>
-                    <div class="col-md-6">
-                        <h6>{{ include.opponent2 }}</h6>
-                        <p>{{ include.details2 | markdownify }}</p>
+                    <div class="col-md-3 text-center">
+                        <h5>{{ include.opponent1 }}</h5>
+                        <span class="badge badge-info badge-pill rounded-pill w-100">{{ include.score1 }} pts</span>
+                    </div>
+                    <div class="col-md-3 text-center">
+                        <h5>{{ include.opponent2 }}</h5>
+                        <span class="badge badge-info badge-pill rounded-pill w-100">{{ include.score2 }} pts</span>
                     </div>
                 </div>
+                {% assign points_list = include.points | split: ', ' %}
+                {% assign details1_list = include.details1 | split: ', ' %}
+                {% assign details2_list = include.details2 | split: ', ' %}
+                {% for i in (0..points_list.size) %}
+                <div class="card mb-3">
+                    <div class="row no-gutters">
+                        <div class="col-md-6">
+                            <div class="card-body text-center">
+                                <p class="card-text">{{ points_list[i] }}</p>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="card-body text-center">
+                                <p class="card-text">{{ details1_list[i] }}</p>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="card-body text-center">
+                                <p class="card-text">{{ details2_list[i] }}</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
             </div>
         </div>
     </div>
 </div>
+
+
+
 
 
 {% include embedded_video.html video_id=include.video_id start=include.start %}
