add modal points detail

--- a/_sass/colors/light-typography.scss
+++ b/_sass/colors/light-typography.scss
@@ -98,4 +98,7 @@
   --timeline-node-bg: #c2c6cc;
   --timeline-year-dot-color: #ffffff;
 
+  /* modal points */
+  --point-bg-color-variation: rgb(222, 229, 241);
+
 } /* light-scheme */
