--- a/_includes/match_display.html
+++ b/_includes/match_display.html
@@ -32,55 +32,75 @@
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content theme-dark">
             <div class="modal-header">
+                <h4 class="modal-title my-0">Points détaillés du match</h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <div class="row">
-                    <div class="col-md-6 text-center">
-                        <h5><b>Actions</b></h5>
+                <div class="row mb-1">
+                    <div class="col-6 text-center">
+                        <h6 class="small"><b>Actions</b></h6>
                     </div>
-                    <div class="col-md-3 text-center">
-                        <h5>{{ include.opponent1 }}</h5>
-                        <span class="badge badge-info badge-pill rounded-pill w-100">{{ include.score1 }} pts</span>
+                    <div class="col-3 text-center">
+                        <h6 class="small"><b>{{ include.opponent1 }}</b></h6>
                     </div>
-                    <div class="col-md-3 text-center">
-                        <h5>{{ include.opponent2 }}</h5>
-                        <span class="badge badge-info badge-pill rounded-pill w-100">{{ include.score2 }} pts</span>
+                    <div class="col-3 text-center">
+                        <h6 class="small"><b>{{ include.opponent2 }}</b></h6>
                     </div>
                 </div>
                 {% assign points_list = include.points | split: ', ' %}
                 {% assign details1_list = include.details1 | split: ', ' %}
                 {% assign details2_list = include.details2 | split: ', ' %}
                 {% for i in (0..points_list.size) %}
-                <div class="card mb-3">
-                    <div class="row no-gutters">
-                        <div class="col-md-6">
-                            <div class="card-body text-center">
-                                <p class="card-text">{{ points_list[i] }}</p>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="card-body text-center">
-                                <p class="card-text">{{ details1_list[i] }}</p>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="card-body text-center">
-                                <p class="card-text">{{ details2_list[i] }}</p>
-                            </div>
-                        </div>
+                {% assign row_color = forloop.index | modulo: 2 %}
+                <div class="row no-gutters mb-1">
+                    <div class="col-6">
+                        <ul class="list-group list-group-horizontal">
+                            <li class="list-group-item w-100 py-0 small text-right" style="{% if row_color==1 %}background-color: var(--point-bg-color-variation);{% endif %}">{{ points_list[i] }}</li>
+                        </ul>
+                    </div>
+                    <div class="col-3">
+                        <ul class="list-group list-group-horizontal">
+                            <li class="list-group-item w-100 py-0 small text-center" style="{% if row_color==1 %}background-color: var(--point-bg-color-variation);{% endif %}">
+                                {{ details1_list[i] }}
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-3">
+                        <ul class="list-group list-group-horizontal">
+                            <li class="list-group-item w-100 py-0 small text-center" style="{% if row_color==1 %}background-color: var(--point-bg-color-variation);{% endif %}">
+                                {{ details2_list[i] }}
+                            </li>
+                        </ul>
                     </div>
                 </div>
                 {% endfor %}
+                <div class="row no-gutters mt-1">
+                    <div class="col-6">
+                        <ul class="list-group list-group-horizontal">
+                            <li class="list-group-item w-100 py-0 small text-center"><b>Total</b></li>
+                        </ul>
+                    </div>
+                    <div class="col-3">
+                        <ul class="list-group list-group-horizontal">
+                            <li class="list-group-item w-100 py-0 small text-center">
+                                {{ include.score1 }} pts
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-3">
+                        <ul class="list-group list-group-horizontal">
+                            <li class="list-group-item w-100 py-0 small text-center">
+                                {{ include.score2 }} pts
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
-
-
-
 
 
 {% include embedded_video.html video_id=include.video_id start=include.start %}
