--- a/_sass/colors/dark-typography.scss
+++ b/_sass/colors/dark-typography.scss
@@ -103,6 +103,9 @@
   --timeline-color: rgb(63, 65, 68);
   --timeline-year-dot-color: var(--timeline-color);
 
+  /* modal points */
+  --point-bg-color-variation: rgb(57, 57, 66);
+
   .post img[data-src] {
     filter: brightness(95%);
   }
