--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,12 @@ layout: compress
 
     {% include topbar.html %}
 
-    <div id="main-wrapper" class="d-flex justify-content-center">
+    <div id="main-wrapper" class="justify-content-center">
+
+      {% if page.url == "/" or page.url == "/index.html" %}
+        {% include hero_jumbotron.html %}
+      {% endif %}
+
       <div id="main" class="container pl-xl-4 pr-xl-4">
 
         {{ content }}
