--- a/_includes/hero_jumbotron.html
+++ b/_includes/hero_jumbotron.html
@@ -2,7 +2,7 @@
     <div class="container">
         <h2>LES KARIBOUS</h2>
         <div class="separator"></div>
-        <p>Équipe fondée en 2011, nous pronons la simplicité et le plaisir dans la robotique. </p>
+        <p>Équipe fondée en 2011, nous prônons la simplicité et le plaisir dans la robotique. </p>
         <p>Ne manquez pas nos sessions de création en direct sur Twitch Barbatronic, tous les dimanches à 21h !</p>
         <div class="jumbotron-btn">
             <button onclick="location.href='https://twitter.com/barbatronic'" class="btn btn-sm rounded-pill btn-twitter">
