--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,9 +62,9 @@ layout: compress
           </button>
         </div>
         <div class="toast-body text-center pt-0">
-          <p class="pl-2 pr-2 mb-3">{{ site.data.locales[lang].notification.update_found }}</p>
+          <p class="pl-2 pr-2 mb-3">Une mise à jour du site a été trouvée</p>
           <button type="button" class="btn btn-primary" aria-label="Update">
-            {{ site.data.locales[lang].notification.update }}
+            Mettre à jour
           </button>
         </div>
       </div>
