add shop on sidebar and custom redirection on tabs

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -40,7 +40,8 @@
     <!-- the real tabs -->
     {% for tab in site.tabs %}
     <li class="nav-item {% if tab.url == page.url %}{{ " active" }}{% endif %}">
-      <a href="{{ tab.url | relative_url }}" class="nav-link">
+      <a href="
+      {% if tab.redirection %} {{ tab.redirection }} {% else %} {{ tab.url | relative_url }} {% endif %}" class="nav-link">
         <i class="fa-fw {{ tab.icon }} ml-xl-3 mr-xl-3 unloaded"></i>
         {% capture tab_name %}{{ tab.url | split: '/' }}{% endcapture %}
 
