--- a/_includes/hero_jumbotron.html
+++ b/_includes/hero_jumbotron.html
@@ -3,7 +3,7 @@
         <h2>LES KARIBOUS</h2>
         <div class="separator"></div>
         <p>Équipe fondée en 2011, nous prônons la simplicité et le plaisir dans la robotique. </p>
-        <p>Ne manquez pas nos sessions de création en direct sur Twitch Barbatronic, tous les dimanches à 21h !</p>
+        <p>Ne manquez pas nos sessions de création en direct sur Twitch, tous les dimanches à 21h !</p>
         <div class="jumbotron-btn">
             <button onclick="location.href='https://twitter.com/barbatronic'" class="btn btn-sm rounded-pill btn-twitter">
                 <i class="fab fa-twitter"></i> Barbatronic
@@ -25,5 +25,41 @@
             </button>
         </div>
 
+        <h3>
+            <div id="countdown">
+                Prochain live dans :
+                <span id="days"></span>j -
+                <span id="hours"></span>h - 
+                <span id="minutes"></span>min 
+            </div>
+        </h3>
     </div>
 </div>
+
+<script>
+    function getNextLiveDate() {
+        const now = new Date();
+        const nextLive = new Date(now);
+        nextLive.setDate(now.getDate() + (7 + 0 - now.getDay()) % 7); // 0 représente dimanche
+        nextLive.setHours(21, 0, 0, 0); // 21h
+        return nextLive;
+    }
+
+    function updateCountdown() {
+        const now = new Date();
+        const nextLive = getNextLiveDate();
+        const distance = nextLive - now;
+
+        const days = Math.floor(distance / (1000 * 60 * 60 * 24));
+        const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+        const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+        const seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+        document.getElementById("days").textContent = days;
+        document.getElementById("hours").textContent = hours;
+        document.getElementById("minutes").textContent = minutes;
+        document.getElementById("seconds").textContent = seconds;
+    }
+
+    setInterval(updateCountdown, 1000);
+</script>
