refactor docs folders and generation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@ layout: compress
 <!DOCTYPE html>
 
 {% include lang.html %}
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;600&display=swap" rel="stylesheet">
 
 {% include assets-origin.html %}
 
