--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -33,7 +33,9 @@ layout: default
         {{ _content }}
       </div>
     {% else %}
-      {{ _content }}
+      <div class="post-content">
+        {{ _content }}
+      </div>
     {% endif %}
 
     </div>
