--- a/_layouts/doc.html
+++ b/_layouts/doc.html
@@ -7,6 +7,6 @@ pannel_includes:
 
 <h1 data-toc-skip>{{ page.title }}</h1>
 
-<div class="post-content">
+<div class="post-content mb-3">
   {{ content }}
 </div>
