--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,9 +63,9 @@ layout: compress
           </button> 
         </div>
         <div class="toast-body text-center pt-0">
-          <p class="pl-2 pr-2 mb-3">{{ site.data.locales[lang].notification.update_found }}</p>
+          <p class="pl-2 pr-2 mb-3">Une nouvelle version du contenu est disponible.</p>
           <button type="button" class="btn btn-primary" aria-label="Update">
-            {{ site.data.locales[lang].notification.update }}
+            Mise à jour
           </button>
         </div>
       </div>
