--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,6 +80,8 @@ layout: compress
     <script src="{{ '/assets/js/model-viewer.js' | relative_url }}"></script>
     <!-- Loads <model-viewer> for browsers: -->
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+    <!-- Loads KiCanvas - https://kicanvas.org -->
+    <script type="module" src="{{ 'assets/js/kicanvas.js' | relative_url }}"></script>
 
   </body>
 
