--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,7 +79,7 @@ layout: compress
 
     <script src="{{ '/assets/js/model-viewer.js' | relative_url }}"></script>
     <!-- Loads <model-viewer> for browsers: -->
-    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+    <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.4.0/model-viewer.min.js"></script>
     <!-- Loads KiCanvas - https://kicanvas.org -->
     <script type="module" src="{{ 'assets/js/kicanvas.js' | relative_url }}"></script>
 
