--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -12,8 +12,28 @@ refactor: false
         {% for i in (1..page.nb-img) %}
         {% assign img_path = "../../assets/img/gallery/" | append: page.folder | append: "/" | append: i | append: ".jpg" %}
         <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
-            <img src="{{ img_path }}" alt="Image {{ i }}" style="width: 100%; height: 200px; object-fit: cover; display: block;">
+            <!-- Lien qui ouvre la modal -->
+            <a href="#" data-toggle="modal" data-target="#modal{{ i }}">
+                <img src="{{ img_path }}" alt="Image {{ i }}" style="width: 100%; height: 200px; object-fit: cover; display: block;">
+            </a>
         </div>
         {% endfor %}
     </div>
 </div>
+
+<!-- Modals pour chaque image -->
+{% for i in (1..page.nb-img) %}
+{% assign img_path = "../../assets/img/gallery/" | append: page.folder | append: "/" | append: i | append: ".jpg" %}
+<div class="modal fade" id="modal{{ i }}" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <button type="button" class="close" style="position: absolute; right: 10px; top: 10px; z-index: 1051;" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            <div class="modal-body p-0">
+                <img src="{{ img_path }}" class="img-fluid" alt="Image {{ i }}" style="max-height: 80vh; max-width: 100%; object-fit: contain; display: block; margin: auto;">
+            </div>
+        </div>
+    </div>
+</div>
+{% endfor %}
