--- a/_layouts/galleries.html
+++ b/_layouts/galleries.html
@@ -14,7 +14,7 @@ layout: page
             width="auto"
             height="300"
             style="width: 100%; height: 300px; object-fit: cover; border-radius: 30px 30px 0 0;"
-            alt="{{ robot.title }}"
+            alt="{{ gallery.title }}"
           >
         </a>
         <div class="card-body">
