new post for CDR 2025

--- a/_includes/hero_jumbotron.html
+++ b/_includes/hero_jumbotron.html
@@ -3,7 +3,7 @@
         <h2>LES KARIBOUS</h2>
         <div class="separator"></div>
         <p>Équipe fondée en 2011, nous prônons <span class="texte-special">la simplicité</span> et le plaisir dans la <span class="texte-special">robotique.</span></p>
-        <p>Ne manquez pas nos <span class="texte-special">sessions de création</span> en direct sur <span class="texte-special">Twitch</span>, tous les <span class="texte-special">dimanches à 21h !</span></p>
+        <p>Ne manquez pas nos <span class="texte-special">sessions de création</span> en direct sur <span class="texte-special">Twitch</span>, tous les <span class="texte-special">samedis à 9h !</span></p>
         <div class="jumbotron-btn">
             <button onclick="location.href='https://twitter.com/barbatronic'" class="btn btn-sm rounded-pill btn-twitter">
                 <i class="fab fa-twitter"></i> Barbatronic
